InternexDev_Sandbox/src/objects/QB_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Akritiv_Client_Name__c</fullName>
        <label>Akritiv Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceWithJobs__c</fullName>
        <label>BalanceWithJobs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillWithParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillWithParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address_ID__c</fullName>
        <label>Billing Address ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line1__c</fullName>
        <label>Billing Address Line1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line2__c</fullName>
        <label>Billing Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line3__c</fullName>
        <label>Billing Address Line3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_CountrySubDivisionCode__c</fullName>
        <label>Billing CountrySubDivisionCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Location__c</fullName>
        <label>Billing Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Akritiv Client ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID_formula__c</fullName>
        <formula>CASESAFEID(Client_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyRef__c</fullName>
        <label>CurrencyRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_with_QB_Id__c</fullName>
        <externalId>true</externalId>
        <label>Customer with QB Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Debtor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debtor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You Can not Select same Debtor for multiple Customers.</errorMessage>
            <filterItems>
                <field>Debtor__c.QB_Customer__c</field>
                <operation>equals</operation>
                <value>&apos;&apos;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Debtor__c</referenceTo>
        <relationshipLabel>QB Customers</relationshipLabel>
        <relationshipName>QB_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>DisplayName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_for_Integration__c</fullName>
        <formula>UPPER(Primary_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email for Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyName__c</fullName>
        <label>FamilyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullyQualifiedName__c</fullName>
        <label>FullyQualifiedName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Given_Name__c</fullName>
        <label>Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_for_Integration__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Primary_Phone_Number__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone for Integration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Client_ID__c</fullName>
        <label>Portal Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Phone_Number__c</fullName>
        <label>Primary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrintOnCheckName__c</fullName>
        <label>PrintOnCheckName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_CreateTime__c</fullName>
        <label>QB CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_LastUpdatedTime__c</fullName>
        <label>QB LastUpdatedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuickBook_ID__c</fullName>
        <label>QuickBook ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_ID__c</fullName>
        <label>Shipping Address ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line1__c</fullName>
        <label>Shipping Address Line1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line2__c</fullName>
        <label>Shipping Address Line2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line3__c</fullName>
        <label>Shipping Address Line3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_CountrySubDivisionCode__c</fullName>
        <label>Shipping CountrySubDivisionCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Location__c</fullName>
        <label>Shipping Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <label>QB Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DisplayName__c</columns>
        <columns>FamilyName__c</columns>
        <columns>FullyQualifiedName__c</columns>
        <columns>Active__c</columns>
        <columns>CurrencyRef__c</columns>
        <columns>Balance__c</columns>
        <columns>Source__c</columns>
        <columns>SyncToken__c</columns>
        <columns>Taxable__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>